Added three.js link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JsCraft</title>
 
     <script src="js/main.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
   </head>
   <body>
 
