--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta charset="UTF-8">
     <title>JsCraft</title>
 
-    <script src="js/main.js"></script>
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+      }
+      canvas {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+
     <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
   </head>
   <body>
 
+    <script src="js/main.js"></script>
   </body>
 </html>
