Added socket.io client script

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
     </style>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
 
