--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
     </style>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="http://2.2.2.110:6001/socket.io/socket.io.js"></script>
   </head>
   <body>
 
