--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
     <script src="http://2.2.2.110:6001/socket.io/socket.io.js"></script>
     <script src="js/microajax.min.js"></script>
+    <script src="js/keyboardstate.js"></script>
   </head>
   <body>
 
