--- a/client/index.html
+++ b/client/index.html
@@ -20,9 +20,10 @@
     <script src="http://2.2.2.110:6001/socket.io/socket.io.js"></script>
     <script src="js/microajax.min.js"></script>
     <script src="js/keyboardstate.js"></script>
+    <script src="js/physi.js"></script>
   </head>
-  <body>
 
+  <body>
     <script src="js/main.js"></script>
   </body>
 </html>
